Save work: multiple updates

--- a/OdishaHandLoomApplication/src/main/resources/application.properties
+++ b/OdishaHandLoomApplication/src/main/resources/application.properties
@@ -87,3 +87,13 @@ otp.max-attempts=5
 otp.resend-cooldown-seconds=60
 
 
+
+
+# AI Configuration (Ollama Local)
+ai.ollama.base-url=http://127.0.0.1:11434/api/generate
+ai.ollama.model=tinyllama
+spring.ai.ollama.chat.options.temperature=0.4
+spring.ai.retry.enabled=true
+spring.ai.retry.max-attempts=3
+spring.ai.retry.backoff.initial-interval=2000ms
+
