--- a/UdraKala/package.json
+++ b/UdraKala/package.json
@@ -20,6 +20,7 @@
     "@react-google-maps/api": "^2.20.8",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
+    "@reduxjs/toolkit": "^2.11.2",
     "@stomp/stompjs": "^7.2.1",
     "@stripe/react-stripe-js": "^5.4.1",
     "@stripe/stripe-js": "^8.5.3",
@@ -30,15 +31,19 @@
     "date-fns": "^4.1.0",
     "emailjs-com": "^3.2.0",
     "flowbite-react": "^0.12.14",
+    "i18next": "^25.7.3",
+    "i18next-browser-languagedetector": "^8.2.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.556.0",
     "motion": "^12.23.25",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.5.1",
     "react-leaflet": "^5.0.0",
     "react-qr-barcode-scanner": "^2.1.20",
     "react-qr-code": "^2.0.18",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.10.1",
     "react-webcam": "^7.2.0",
     "recharts": "^3.5.1",
